AUTOMAKE_OPTIONS=	foreign

man1_MANS = wildmidi.1
man3_MANS = WildMidi_GetString.3 WildMidi_Init.3 WildMidi_MasterVolume.3 WildMidi_Open.3 WildMidi_OpenBuffer.3 \
            WildMidi_GetOutput.3 WildMidi_SetOption.3 WildMidi_GetInfo.3 WildMidi_FastSeek.3 \
            WildMidi_SampledSeek.3 WildMidi_Close.3 WildMidi_Shutdown.3
man5_MANS = wildmidi.cfg.5

EXTRA_DIST = $(man1_MANS) $(man3_MANS) $(man5_MANS)
